--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -24,3 +24,9 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: [ 'host.docker.internal:9270' ]
+
+  - job_name: 'application'
+    scrape_interval: 5s
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['host.docker.internal:8080']
