--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=server
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.prometheus.metrics.export.enabled=true
+server.tomcat.mbeanregistry.enabled=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.tags.application=${spring.application.name}
